fix for more button overflowing facet panel

--- a/style.css
+++ b/style.css
@@ -100,7 +100,9 @@
   background-color: transparent;
   color: #c00;
   border: 1px solid #ddd;
-  margin: 10px 10px 0px 10px;
+  margin: 10px 0px 10px 0px;
+  width:100%;
+  white-space:normal;
 }
 .drs-facet-val {
   display:block;
